native-pc: use Android-supported byte writes in cold-start probe